--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -8,6 +8,9 @@ on: # yamllint disable-line rule:truthy
     branches:
       - "main"
 
+env:
+  ERGEBNIS_BOT_NAME: "ergebnis-bot"
+
 jobs:
   coding-standards:
     name: "Coding Standards"
@@ -19,7 +22,7 @@ jobs:
         uses: "actions/checkout@v2.3.3"
 
       - name: "Lint YAML files"
-        uses: "ibiqlik/action-yamllint@v1"
+        uses: "ibiqlik/action-yamllint@v1.0.0"
         with:
           config_file: ".yamllint.yaml"
           file_or_dir: "."
@@ -45,7 +48,7 @@ jobs:
       )
 
     steps:
-      - name: "Request review from @ergebnis-bot"
+      - name: "Request review from @${{ env.ERGEBNIS_BOT_NAME }}"
         uses: "actions/github-script@v3.0.0"
         with:
           github-token: "${{ secrets.ERGEBNIS_BOT_TOKEN }}"
@@ -54,7 +57,7 @@ jobs:
             const repository = context.repo
 
             const reviewers = [
-              "ergebnis-bot",
+              "${{ env.ERGEBNIS_BOT_NAME }}",
             ]
 
             await github.pulls.requestReviewers({
@@ -64,7 +67,7 @@ jobs:
               reviewers: reviewers,
             })
 
-      - name: "Assign @ergebnis-bot"
+      - name: "Assign @${{ env.ERGEBNIS_BOT_NAME }}"
         uses: "actions/github-script@v3.0.0"
         with:
           github-token: "${{ secrets.ERGEBNIS_BOT_TOKEN }}"
@@ -72,12 +75,12 @@ jobs:
             const pullRequest = context.payload.pull_request
             const repository = context.repo
 
-            const reviewers = [
-              "ergebnis-bot",
+            const assignees = [
+              "${{ env.ERGEBNIS_BOT_NAME }}",
             ]
 
             await github.issues.addAssignees({
-              assignees: reviewers,
+              assignees: assignees,
               issue_number: pullRequest.number,
               owner: repository.owner,
               repo: repository.repo,
@@ -85,7 +88,7 @@ jobs:
 
       - name: "Approve pull request"
         uses: "actions/github-script@v3.0.0"
-        if: "github.actor != 'ergebnis-bot'"
+        if: "github.actor != '${{ env.ERGEBNIS_BOT_NAME }}'"
         with:
           github-token: "${{ secrets.ERGEBNIS_BOT_TOKEN }}"
           script: |
