--- a/.github/workflows/triage.yaml
+++ b/.github/workflows/triage.yaml
@@ -3,7 +3,7 @@
 name: "Triage"
 
 on: # yamllint disable-line rule:truthy
-  pull_request:
+  pull_request_target:
     types:
       - "opened"
 
@@ -15,7 +15,7 @@ jobs:
 
     steps:
       - name: "Add labels based on branch name"
-        uses: "actions/github-script@v3"
+        uses: "actions/github-script@v3.0.0"
         with:
           github-token: "${{ secrets.ERGEBNIS_BOT_TOKEN }}"
           script: |
