Fix: Adjust usage of octokit

--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -60,7 +60,7 @@ jobs:
               "${{ env.ERGEBNIS_BOT_NAME }}",
             ]
 
-            await github.pulls.requestReviewers({
+            await github.rest.pulls.requestReviewers({
               owner: repository.owner,
               pull_number: pullRequest.number,
               repo: repository.repo,
@@ -79,7 +79,7 @@ jobs:
               "${{ env.ERGEBNIS_BOT_NAME }}",
             ]
 
-            await github.issues.addAssignees({
+            await github.rest.issues.addAssignees({
               assignees: assignees,
               issue_number: pullRequest.number,
               owner: repository.owner,
@@ -95,7 +95,7 @@ jobs:
             const pullRequest = context.payload.pull_request
             const repository = context.repo
 
-            await github.pulls.createReview({
+            await github.rest.pulls.createReview({
               event: "APPROVE",
               owner: repository.owner,
               pull_number: pullRequest.number,
@@ -110,7 +110,7 @@ jobs:
             const pullRequest = context.payload.pull_request
             const repository = context.repo
 
-            await github.pulls.merge({
+            await github.rest.pulls.merge({
               merge_method: "merge",
               owner: repository.owner,
               pull_number: pullRequest.number,
