Fix: Configure push options

--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -36,3 +36,4 @@ jobs:
           commit_message: "Enhancement: Update README.md"
           commit_user_email: "bot@ergebn.is"
           commit_user_name: "ergebnis-bot"
+          push_options: "--force"
